src/test/ui/generic-associated-types/const_params_have_right_type.stderr
error[E0053]: type `Foo` has an incompatible generic parameter for trait `Trait`
  --> $DIR/const_params_have_right_type.rs:6:14
   |
LL | trait Trait {
   |       -----
LL |     type Foo<const N: u8>;
   |              ----------- expected const parameter of type `u8`
...
LL | impl Trait for () {
   | -----------------
LL |     type Foo<const N: u64> = u32;
   |              ^^^^^^^^^^^^ found const parameter of type `u64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
